--- a/config/carvel/package.yaml
+++ b/config/carvel/package.yaml
@@ -1,3 +1,6 @@
+# Copyright 2021 VMware, Inc.
+# SPDX-License-Identifier: Apache-2.0
+
 apiVersion: data.packaging.carvel.dev/v1alpha1
 kind: Package
 metadata:
