--- a/samples/provisioned-service/service-binding.yaml
+++ b/samples/provisioned-service/service-binding.yaml
@@ -7,13 +7,13 @@ kind: ServiceBinding
 metadata:
   name: provisioned-service
 spec:
-  application:
-    apiVersion: apps/v1
-    kind: Deployment
-    name: provisioned-service
   service:
     apiVersion: bindings.labs.vmware.com/v1alpha1
     kind: ProvisionedService
+    name: provisioned-service
+  workload:
+    apiVersion: apps/v1
+    kind: Deployment
     name: provisioned-service
   env:
   - name: TARGET
