--- a/samples/spring-petclinic/service-binding.yaml
+++ b/samples/spring-petclinic/service-binding.yaml
@@ -7,12 +7,12 @@ kind: ServiceBinding
 metadata:
   name: spring-petclinic-db
 spec:
-  application:
-    apiVersion: apps/v1
-    kind: Deployment
-    name: spring-petclinic
   # direct Secret reference is used for compatibility, but not recommended for dynamically provisioned services
   service:
     apiVersion: v1
     kind: Secret
     name: spring-petclinic-db
+  workload:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: spring-petclinic
