--- a/config/300-servicebindingprojection.yaml
+++ b/config/300-servicebindingprojection.yaml
@@ -44,7 +44,32 @@ spec:
             type: object
           spec:
             properties:
-              application:
+              binding:
+                properties:
+                  name:
+                    type: string
+                required:
+                - name
+                type: object
+              env:
+                items:
+                  properties:
+                    key:
+                      type: string
+                    name:
+                      type: string
+                  required:
+                  - key
+                  - name
+                  type: object
+                type: array
+              name:
+                type: string
+              provider:
+                type: string
+              type:
+                type: string
+              workload:
                 properties:
                   apiVersion:
                     type: string
@@ -83,35 +108,10 @@ spec:
                 - apiVersion
                 - kind
                 type: object
-              binding:
-                properties:
-                  name:
-                    type: string
-                required:
-                - name
-                type: object
-              env:
-                items:
-                  properties:
-                    key:
-                      type: string
-                    name:
-                      type: string
-                  required:
-                  - key
-                  - name
-                  type: object
-                type: array
-              name:
-                type: string
-              provider:
-                type: string
-              type:
-                type: string
             required:
-            - application
             - binding
             - name
+            - workload
             type: object
           status:
             properties:
