--- a/samples/controlled-resource/service-binding.yaml
+++ b/samples/controlled-resource/service-binding.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 ---
-apiVersion: service.binding/v1alpha2
+apiVersion: servicebinding.io/v1alpha3
 kind: ServiceBinding
 metadata:
   name: controlled-resource
