--- a/config/300-servicebinding.yaml
+++ b/config/300-servicebinding.yaml
@@ -4,7 +4,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: servicebindings.service.binding
+  name: servicebindings.servicebinding.io
   annotations:
     controller-gen.kubebuilder.io/version: v0.3.0
   labels:
