--- a/config/carvel/bundle.yaml
+++ b/config/carvel/bundle.yaml
@@ -1,4 +1,5 @@
-#! Copyright 2021 VMware Inc. All rights reserved
+#! Copyright 2021 VMware, Inc.
+#! SPDX-License-Identifier: Apache-2.0
 
 #@ load("@ytt:overlay", "overlay")
 
