--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,9 +30,9 @@ jobs:
     runs-on: ubuntu-latest
     env:
       REGISTRY_NAME: registry.local
-      REGISTRY_PORT: 80
-      KO_DOCKER_REPO: registry.local/service-bindings
-      BUNDLE: registry.local/service-bindings/bundle
+      REGISTRY_PORT: 5000
+      KO_DOCKER_REPO: registry.local:5000/service-bindings
+      BUNDLE: registry.local:5000/service-bindings/bundle
     steps:
     - uses: actions/checkout@v2.4.0
     - uses: actions/setup-go@v2.1.4
