--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,6 +39,13 @@ jobs:
       with:
         go-version: 1.15.x
     - uses: vmware-tanzu/carvel-setup-action@v1
+      with:
+        imgpkg: v0.22.0
+    - run: |
+        imgpkg version
+        kbld version
+        ytt version
+
     - name: Install ko
       run: |
         cd $(mktemp -d -t ko.XXXX)
@@ -115,6 +122,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2.4.0
     - uses: vmware-tanzu/carvel-setup-action@v1
+      with:
+        imgpkg: v0.22.0
+    - run: |
+        imgpkg version
+        kbld version
+        ytt version
+
     - name: Install kind
       run: |
         cd $(mktemp -d -t kind.XXXX)
@@ -278,6 +292,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2.4.0
     - uses: vmware-tanzu/carvel-setup-action@v1
+      with:
+        imgpkg: v0.22.0
+    - run: |
+        imgpkg version
+        kbld version
+        ytt version
+        
     - name: Install crane
       run: |
         cd $(mktemp -d -t kind.XXXX)
