--- a/config/carvel/package-install.values.yaml
+++ b/config/carvel/package-install.values.yaml
@@ -12,3 +12,4 @@ package_prerelease: null
 service_account_name: service-binding-kc
 cluster_role_name: service-binding-kc
 cluster_role_binding_name: service-binding-kc
+sync_period: 10m
