--- a/config/carvel/package-install.yaml
+++ b/config/carvel/package-install.yaml
@@ -14,6 +14,7 @@ metadata:
     kapp.k14s.io/change-rule: "upsert after upserting service-bindings.labs.vmware.com/install-rbac"
 spec:
   serviceAccountName: #@ data.values.service_account_name
+  syncPeriod: #@ data.values.sync_period
   packageRef:
     refName: #@ data.values.package_name
     versionSelection:
