--- a/samples/overridden-type-provider/service-binding.yaml
+++ b/samples/overridden-type-provider/service-binding.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 ---
-apiVersion: servicebinding.io/v1alpha3
+apiVersion: servicebinding.io/v1beta1
 kind: ServiceBinding
 metadata:
   name: overridden-type-provider
