Updated log time stamp format to match RFC-3339 (#224)
* Updated log timestamp format to match RFC-3339
* Enabled zap-logger-config in config-logging.yaml

Signed-off-by: Rashed Kamal <krashed@vmware.com>

--- a/config/config-logging.yaml
+++ b/config/config-logging.yaml
@@ -53,3 +53,24 @@ data:
     # Changes are be picked up immediately.
     loglevel.controller: "info"
     loglevel.webhook: "info"
+  zap-logger-config: |
+    {
+      "level": "info",
+      "development": false,
+      "outputPaths": ["stderr"],
+      "errorOutputPaths": ["stderr"],
+      "encoding": "json",
+      "encoderConfig": {
+        "timeKey": "ts",
+        "levelKey": "level",
+        "nameKey": "logger",
+        "callerKey": "caller",
+        "messageKey": "msg",
+        "stacktraceKey": "stacktrace",
+        "lineEnding": "",
+        "levelEncoder": "",
+        "timeEncoder": "rfc3339nano",
+        "durationEncoder": "",
+        "callerEncoder": ""
+      }
+    }
